--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
@@ -9,10 +9,12 @@
 
 
 .slides {
-    max-height: 320px;
+    height: 420px;
     list-style: none;
     position: relative;
-    width: 400%; /* Number of panes * 100% */
+    width: 100%;
+    padding-left: 10%;
+    /*width: 400%; /* Number of panes * 100% */
     overflow: hidden; /* Clear floats */
     /* Slide effect Animations*/
     -moz-animation: carousel 10s infinite;
@@ -20,6 +22,13 @@
     animation: carousel 10s infinite;
 }
 
+    .slides h3 {
+        font-size: 11px;
+        line-height: 13.5px;
+        width: 108px;
+        margin: auto;
+        text-align: center;
+    }
 /*====Indicator Style======*/
 .active {
     background-color: #ccc5c5;
@@ -42,7 +51,7 @@ ul {
 .slide-item {
     position: relative;
     float: left;
-    width: 25%; /* 100 / number of panes */
+    width: 30%; /* 100 / number of panes */
     transition: 1s;
     left: 0;
 }
@@ -51,22 +60,16 @@ ul {
     display: block;
     width: 100%;
     max-width: 100%;
-    padding-bottom: 62px;
     padding-top: 65px;
+    height: 290px;
 }
 
 .carousel h2 {
     margin-bottom: 6px;
-    font-size: 2em;
-    padding: 1.5em 0.5em 1.5em 0.5em;
-    position: absolute;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
+    font-size: 12px;
+    font-weight: bold;
     text-align: center;
-    color: #ccc5c5;
     font-family: myriadpro-regular;
-    text-shadow: 2px 2px 5px black;
 }
 
 .carousel-indicators li {
