mobile responsive for home image banner

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
@@ -1,5 +1,7 @@
 ﻿@import (reference) "../../bower_components/bootstrap/less/variables.less";
-
+.navbar-inverse .navbar-toggle .icon-bar{
+    background-color:#adadad;
+}
 .nav {
     position: relative;
 }
