--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/apbanner.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/apbanner.component.html
@@ -5,19 +5,19 @@
     <ul class="slides">
         <li class="slide-item" >
             <img src="{{images[0].url}}" alt="">
-            <h2>{{images[0].title}}</h2>
-            <h3>{{images[0].desccription}}</h3>
+            <h2 class="hidden-xs">{{images[0].title}}</h2>
+            <h3 class="hidden-xs">{{images[0].desccription}}</h3>
         </li>
         <li class="slide-item" >
             <img src="{{images[1].url}}" alt="">
-            <h2>{{images[1].title}}</h2>
-            <h3>{{images[1].desccription}}</h3>
+            <h2 class="hidden-xs">{{images[1].title}}</h2>
+            <h3 class="hidden-xs">{{images[1].desccription}}</h3>
         </li>
         <li class="slide-item" >
             <img src="{{images[2].url}}" alt="">
             <div style="padding-left:55px;">
-                <h2>{{images[2].title}}</h2>
-                <h3>{{images[2].desccription}}</h3>
+                <h2 class="hidden-xs">{{images[2].title}}</h2>
+                <h3 class="hidden-xs">{{images[2].desccription}}</h3>
             </div>
             
         </li>
