akash:Croped iamge bug fixed with no credential

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -81,7 +81,7 @@
                 <li *ngIf="userInfoDetails?.questionViewCount!=0">
                     <i class="fa-li fa fa-eye">
 
-                    </i><!--Views-->Vistas de perfil: {{userInfoDetails?.questionViewCount}}
+                    </i><!--Views-->Leídos: {{userInfoDetails?.questionViewCount}}
                 </li>
             </ul>
         </div>
