--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
@@ -3,7 +3,15 @@
     float: left;
     margin-left: -7px;
 }
-
+.answer-text img{
+    width:100%;
+}
+.answer-img {
+        max-width: 150px;
+        max-height: 150px;
+        float: right;
+        margin-right: 20px;
+    }
 .menu-container {
     margin: 5px auto;
     width: 65%;
