--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -36,7 +36,7 @@
         <div *ngIf="userObj">
             <img class="user-image " src="../../../../profile/Anonymous.png" />
             <div class="user-info">
-                <div class="user-detail">Anonymous</div>
+                <div class="user-detail">Anónimo</div>
                 <div class="user-detail light-gray">{{viewDate | date: 'dd MMM, yyyy'}}</div>
             </div>
         </div>
