--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
@@ -44,7 +44,7 @@
 
             <form asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
                 <h2 class="login-header">
-                    @*Sign Up*@Regístrate 
+                    @*Sign Up*@Regístrate
                 </h2>
                 @*<div asp-validation-summary="All" class="text-danger"></div>*@
                 <div class="form-group">
@@ -66,14 +66,15 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset-1 col-md-10">
-                        <input type="checkbox" id="accept" onclick="acceptTerms()"/>
-                        Accept Terms and conditions
+                    <div class="col-sm-offset-1 col-md-8">
+                        <input type="checkbox" id="accept" onclick="acceptTerms()" />
+                        @*Accept Terms and conditions*@
+                        Acepto y he leído los <a href="http://altaperspectiva.com/terminosdeuso" target="_blank">Términos y condiciones de uso</a> y <a href="http://altaperspectiva.com/politicasdeprivacidad" target="_blank">Politicas de privacidad</a>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-md-10">
-                        <button type="submit" class="btn btn-xm" id="register" disabled >@*Sign Up*@Regístrate</button>
+                        <button type="submit" class="btn btn-xm" id="register" disabled>@*Sign Up*@Regístrate</button>
                     </div>
                 </div>
             </form>
