akash:Employment bug fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -111,7 +111,7 @@
             </h3>
             <ul class="credential-panel">
                 <li>
-                    <div class="show" *ngIf="employmentExists && isOwner">
+                    <div class="show" *ngIf="employmentExists">
                         <div class="mytooltip"><i class="fa fa-suitcase"></i><span class="mytooltiptext"><!--Employment-->Trabajo</span></div>
                         <span title="Employment" innerHTML="{{employmentHtml}}"></span>
                         <a *ngIf="isOwner" (click)='openEmploymentDialogAnchor()'  class='edit show-edit'><i class='fa fa-edit'></i></a>
