ipad responsive style added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navs.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navs.less
@@ -49,8 +49,13 @@
             font-size: 13px;
             vertical-align: middle;
             font-weight: 700;
-               
         }
-      
+    }
+}
+
+@media only screen and (max-width:1000px) {
+    .nav > li > a {
+        padding: 0;
+        padding-right: 5px;
     }
 }
