--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -8,7 +8,7 @@
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     color: white;
-    width: 10%;
+    width: 15%;
 }
 
 .icon-container {
@@ -97,7 +97,7 @@ a {
 
 .search-input {
     background-color: #f5f5f5;
-    width: 90%;
+    width: 85%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     float: left;
@@ -105,9 +105,9 @@ a {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     padding-left: 15px;
-    padding-right:15px;
-    font-size:15px;
-    box-shadow:none;
+    padding-right: 15px;
+    font-size: 15px;
+    box-shadow: none;
 }
 
 .form-group {
@@ -135,7 +135,8 @@ a {
     display: inline-block;
     width: 15px;
 }
- .bottom-float {
+
+.bottom-float {
     position: absolute;
     bottom: -3%;
     left: 0;
@@ -294,7 +295,37 @@ label {
         left: 47%;
     }
 
+.visible-tab {
+    visibility: hidden;
+}
+
+.hidden-tab {
+    visibility: visible;
+}
+
+@media only screen and (min-width: 901px) and (max-width:1280px) {
+    .search-responsive {
+        width: 50%;
+        margin-left: 290px;
+    }
+}
+@media only screen and (min-width: 768px) and (max-width:900px) {
+    .search-responsive {
+        width: 40%;
+        margin-left: 250px;
+    }
+        .visible-tab {
+        visibility: visible;
+        font-size: 20px;
+        margin-top: 8px;
+    }
+
+    .hidden-tab {
+        visibility: hidden;
+    }
+}
 @media only screen and (max-width:767px) {
+
     /*.search-box {
         padding: 0 41px 0px;
         position: fixed;
@@ -302,6 +333,10 @@ label {
         top: 9px;
         z-index: 9999;
     }*/
+
+    .visible-tab {
+        visibility: visible;
+    }
 
     .search-input {
         width: calc(100% - 28px);
@@ -321,6 +356,7 @@ label {
         margin: 0;
         z-index: 9000;
     }
+
     .bottom-float .center-width {
         width: 100%;
     }
