search panel responsive issue fixed nav responsive position fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
@@ -114,6 +114,14 @@ h5 {
 .question-title {
     flex-grow: 1;
 }
+@media only screen and (max-width:1000px) {
+    .center-width{
+        width:60%;
+    }
+    .left-panel{
+        width:17%;
+    }
+}
 
 @media only screen and (max-width:767px) {
     .category-panel-xs {
