akash:User prefetch otptimization

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -11,7 +11,7 @@
             </div>
             <div class="suggestions" id="suggestion" *ngIf="isOnModal">
                 <!-- Question Text -->
-                <search-dropdown [title]="title"></search-dropdown>
+                <search-dropdown [title]="title" [categories]="categories"></search-dropdown>
                 <!-- Question Suggestion -->
                 <div class="suggestion-container" *ngIf="(filteredQuestionList?.length>0) || (categoryMatched?.length > 0)">
                     <div class="arrow-container"></div>
