fire fox nav vabr spacing fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
@@ -5,6 +5,7 @@
     .fixed-top {
         position: fixed;
         top: 0;
+        width:100%
     }    
 </style>
 <div class="banner-container z-banner">
