--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
@@ -114,7 +114,7 @@ h5 {
 .question-title {
     flex-grow: 1;
 }
-@media only screen and (max-width:1000px) {
+@media only screen and (min-width: 768px) and (max-width:1000px) {
     .center-width{
         width:60%;
     }
