--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -60,10 +60,11 @@
         </div>
         <ul class="left-panel-list">
             <li class=""><a routerLink="/">Alta Perspectiva</a></li>
-            <li><a routerLink="/question/home/1">Questions</a></li>
-            <li *ngIf="_logObj.isLoggedIn"><a (click)="gotoProfile()"> Profile</a></li>
-            <li *ngIf="_logObj.isLoggedIn"><a href="/signout"> Sign Out </a></li>
-            <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Log in</a></li>
+
+            <li><a routerLink="/question/home/1">Preguntas</a></li>
+            <li *ngIf="_logObj.isLoggedIn"><a (click)="gotoProfile()"> Perfil</a></li>
+            <li *ngIf="_logObj.isLoggedIn"><a href="/signout"> Cerrar sesión </a></li>
+            <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Iniciar sesión</a></li>
         </ul>
     </div>
     <category-left-menu [caegoryId]="categoryId"></category-left-menu>
