--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -77,13 +77,13 @@
                     <ul class="left-panel-list">
                         <li class=""><a routerLink="/">Alta Perspectiva</a></li>
                         <li><a routerLink="/question/home/1"><!--Questions-->Preguntas</a></li>
-                        <li *ngIf="_logObj.isLoggedIn"><a href="/signout"> Sign Out </a></li>
-                        <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Log in</a></li>
+                        <li *ngIf="_logObj.isLoggedIn"><a href="/signout">Cerrar sesión</a></li>
+                        <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Iniciar sesión</a></li>
                     </ul>
                 </div>
                 <ul id="profile-route" class="profile-leftmenu">
-                    <li><a (click)="hideMenu()" class="route link-with-number" tabindex="0" id="question-route" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']" routerLinkActive="active-link">Preguntas<!--Questions--><span>{{profileParam?.questions}}</span> </a></li>
                     <li><a (click)="hideMenu()" class="route link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']" routerLinkActive="active-link"><!--Answers-->Respuestas<span>{{profileParam?.answers}}</span> </a></li>
+                    <li><a (click)="hideMenu()" class="route link-with-number" tabindex="0" id="question-route" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']" routerLinkActive="active-link">Preguntas<!--Questions--><span>{{profileParam?.questions}}</span> </a></li>
                     <li><a (click)="hideMenu()" class="route link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" routerLinkActive="active-link">Seguidores<!--Followers--> <span>{{profileParam?.followers}}</span></a></li>
                     <li><a (click)="hideMenu()" class="route link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'following']" routerLinkActive="active-link"><!--Followings-->Siguiendo <span>{{profileParam?.followings}}</span></a></li>
                     <li><a (click)="hideMenu()" class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'bookmark']" routerLinkActive="active-link"><!--Bookmarks-->Guardadas <span>{{profileParam?.bookmarks}}</span></a></li>
