--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -29,9 +29,10 @@
             <a (click)="hideMenu()"> <i class="fa fa-arrow-left"></i> </a>
         </div>
         <ul class="left-panel-list">
-            <li class=""><a routerLink="/">Alta Perspectiva</a></li>
-            <li><a routerLink="/question/home/1">Questions</a></li>
-            <li><a (click)="gotoProfile()"> Profile</a></li>
+            <li><a routerLink="/question/home/1">Preguntas</a></li>
+            <li *ngIf="_logObj.isLoggedIn"><a (click)="gotoProfile()"> Perfil</a></li>
+            <li *ngIf="_logObj.isLoggedIn"><a href="/signout"> Cerrar sesión </a></li>
+            <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Iniciar sesión</a></li>
         </ul>
     </div>
     <related-question-left-menu></related-question-left-menu>
