--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-fullscreen/question-fullscreen.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-fullscreen/question-fullscreen.component.html
@@ -5,6 +5,20 @@
     }
     
 </style>
+<div id="toggleMenu" class="left-panel category-panel-xs">
+    <div class="menu-container visible-xs">
+        <div class="cloe-button">
+            <a (click)="hideMenu()"> <i class="fa fa-arrow-left"></i> </a>
+        </div>
+        <ul class="left-panel-list">
+            <li class=""><a routerLink="/">Alta Perspectiva</a></li>
+            <li><a routerLink="/question/home/1">Preguntas</a></li>
+            <li *ngIf="_logObj.isLoggedIn"><a (click)="gotoProfile()"> Perfil</a></li>
+            <li *ngIf="_logObj.isLoggedIn"><a href="/signout"> Cerrar sesión </a></li>
+            <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Iniciar sesión</a></li>
+        </ul>
+    </div>
+</div>
 <div class="fullscreen">
     <answer-submit [question]="question" [isFullScreen]="true" ></answer-submit>
 </div>
