--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -83,7 +83,7 @@
                 <img class="social-image" id="img1" src="../images/facebooklogo.jpg" />
             </a>
             
-            <a href="https://twitter.com/ntent/tweet?text={{question?.title}}Check out:{{question?.shareUrl}}"
+            <a href="https://twitter.com/intent/tweet?text={{question?.title}}Check out:{{question?.shareUrl}}"
                class="SHARE TWITTER"
                onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
                 <img class="social-image" id="img2" src="../images/twitter.png" />
