register link added in responsive view

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
@@ -73,6 +73,7 @@
             <li><a routerLink="/question/home/1">Preguntas</a></li>
             <li *ngIf="_logObj.isLoggedIn"><a href="/signout"> Cerrar sesión </a></li>
             <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Iniciar sesión</a></li>
+            <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Regístrate <!--Register--></a></li>
         </ul>
     </div>
 
