--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -14,7 +14,9 @@
                 <li><a routerLink="/question/home/1">Preguntas</a></li>
                 <li *ngIf="_logObj.isLoggedIn"><a (click)="gotoProfile()"> Perfil</a></li>
                 <li *ngIf="_logObj.isLoggedIn"><a href="/signout"> Cerrar sesión </a></li>
+
                 <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Iniciar sesión</a></li>
+                <li *ngIf="!_logObj.isLoggedIn"><a href="/signin">Regístrate <!--Register--></a></li>
             </ul>
         </div>
         <div id="leftPanel">
