--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -29,6 +29,7 @@
             <a (click)="hideMenu()"> <i class="fa fa-arrow-left"></i> </a>
         </div>
         <ul class="left-panel-list">
+            <li class=""><a routerLink="/">Alta Perspectiva</a></li>
             <li><a routerLink="/question/home/1">Preguntas</a></li>
             <li *ngIf="_logObj.isLoggedIn"><a (click)="gotoProfile()"> Perfil</a></li>
             <li *ngIf="_logObj.isLoggedIn"><a href="/signout"> Cerrar sesión </a></li>
