--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -33,7 +33,8 @@
 
             <button type="submit" class="ask-button fixed-height" [disabled]="!titleName.valid">
                 <span class="glyphicon glyphicon-question-sign  visible-tab" aria-hidden="true"></span>
-                <span class="glyphicon glyphicon-search hidden-xs hidden-tab" aria-hidden="true"></span><span class="ask-text hidden-xs hidden-tab">Enviar</span>
+                <!--<span class="glyphicon glyphicon-search hidden-xs hidden-tab" aria-hidden="true"></span>-->
+                <span class="ask-text hidden-xs hidden-tab">Preguntar</span>
             </button>
         </form>
     </div>
