--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
@@ -150,7 +150,7 @@
             <a href="http://altap.azurewebsites.net"><img class="logo" src="../images/LOGO CUADRADO.png" /></a>
             <a href="http://altap.azurewebsites.net" class="navbar-brand">
                 <font style="color: #000000;">
-                    Altaperspectiva
+                    Alta Perspectiva
                 </font>
             </a>
         </div>
