--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -69,7 +69,7 @@
                     <a (click)="GetLatestAnswer(question.id)">
                         <h4>
                             <!--The latest answers-->
-                            Respuestas recientes
+                            Últimas respuestas
                         </h4>
                     </a>
                 </div>
@@ -77,7 +77,7 @@
                     <a (click)="GetBestAnswer(question.id)">
                         <h4>
                             <!--The best answer-->
-                            Las mejores respuestas
+                            Mejores respuestas
                         </h4>
                     </a>
                 </div>
