--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -27,7 +27,7 @@
                     <br />
                     <div style="font-size: 12px;"> {{userObj?.occupation}}</div>
                 </div>
-                <div class="user-detail light-gray">{{viewDate | date: 'dd MMM, yyyy'}}</div>
+                <div class="user-detail light-gray date-font">{{viewDate | date: 'dd MMM, yyyy'}}</div>
             </div>
         </div>
     </div>
