Akash: comma removed from empty  profile

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -82,7 +82,7 @@
                 <li *ngIf="userInfoDetails?.questionViewCount!=0">
                     <i class="fa-li fa fa-eye">
 
-                    </i><!--Views-->Leídos: {{userInfoDetails?.questionViewCount}}
+                    </i><!--Views-->Veces leído: {{userInfoDetails?.questionViewCount}}
                 </li>
             </ul>
         </div>
