footer styling changed and New design added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
@@ -41,28 +41,16 @@ else
 }
 
 <div class="footer">
-    <div class="footer-container">
-        <div class="footer-left">
-            <div class="borrder-circle">
-                <a href="https://www.facebook.com/AltaPerspectivaInfo">
-                    <i class="fa fa-facebook fa-2x">
-                    </i>
-                </a>
-
-            </div>
-            <div class="borrder-circle">
-                <a href="https://twitter.com/AltaPerspectiva">
-                    <i class="fa fa-twitter fa-2x">
-                    </i>
-                </a>
-
-            </div>
-            <div class="borrder-circle">
-                <a href="https://www.instagram.com/altaperspectiva/">
-                    <i class="fa fa-instagram fa-2x">
-                    </i>
-                </a>
-            </div>
+    <div class="row">
+        <div class="col-md-4 col-md-push-4 footer-middle">
+            <div><img class="footer-img" src="../images/LOGO CUADRADO.png"></div>
+            <div><i class="fa fa-linkedin fa-width"></i>&nbsp;<i class="fa fa-facebook fa-width"></i>&nbsp;<i class="fa fa-twitter fa-width"></i>&nbsp;<i class="fa fa-instagram fa-width"></i></div>
+            <div>Copyright &copy; 2017 Alta Perspectiva. By <a href="http://www.nascenia.com/">Nascenia</a> </div> 
+        </div>
+        <div class="col-md-4 col-md-pull-4 footer-left "><span><i class="fa fa-envelope"></i> &nbsp;&nbsp; info@altaperspectiva.com </span> </div>
+        <div class="col-md-4 footer-right">
+            <div><a href="http://altaperspectiva.com/terminosdeuso">Términos de uso</a> </div>
+            <div><a href="http://altaperspectiva.com/politicasdeprivacidad">Políticas de privacidad</a></div>
         </div>
     </div>
 </div>
