--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -22,6 +22,7 @@
 @import "site/color-scheme";
 @import "site/alta-sites";
 @import "site/modal";
+@import "site/footer";
 
 /*Components Less*/
 @import "site/components/tab-panel.component.less";
