social link added  in footer responsive style fix for banner

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
@@ -44,8 +44,13 @@ else
     <div class="row">
         <div class="col-md-4 col-md-push-4 footer-middle">
             <div><img class="footer-img" src="../images/LOGO CUADRADO.png"></div>
-            <div><i class="fa fa-linkedin fa-width"></i>&nbsp;<i class="fa fa-facebook fa-width"></i>&nbsp;<i class="fa fa-twitter fa-width"></i>&nbsp;<i class="fa fa-instagram fa-width"></i></div>
-            <div>Copyright &copy; 2017 Alta Perspectiva. By <a href="http://www.nascenia.com/">Nascenia</a> </div> 
+            <div>
+                <a href="https://www.linkedin.com/in/altaperspectiva/"><i class="fa fa-linkedin fa-width"></i></a> &nbsp;
+                <a href="https://twitter.com/AltaPerspectiva"><i class="fa fa-twitter fa-width"></i>&nbsp;</a>
+                <a href="https://www.facebook.com/AltaPerspectivaInfo/"><i class="fa fa-facebook fa-width"></i>&nbsp;</a>
+                <a href="https://www.instagram.com/altaperspectiva/"><i class="fa fa-instagram fa-width"></i></a>
+            </div>
+            <div>Copyright &copy; 2017 Alta Perspectiva. By <a href="http://www.nascenia.com/">Nascenia</a> </div>
         </div>
         <div class="col-md-4 col-md-pull-4 footer-left "><span><i class="fa fa-envelope"></i> &nbsp;&nbsp; info@altaperspectiva.com </span> </div>
         <div class="col-md-4 footer-right">
