--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/apbanner.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/apbanner.component.html
@@ -2,7 +2,7 @@
     <ul class="slides">
         <li class="slide-item" >
             <img class="background-img" src="{{images[0].url}}" alt="background">
-            <div class="hidden-xs banner-text">
+            <div class="banner-text">
                 <div>Pregunta y comparte tu <em>conocimiento</em> </div>
                 <div class="banner-arrow-container">sobre negocios
                     <img class="banner-arrow" src="../images/curved-arrow.png" alt="arrow" />
