--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
@@ -31,8 +31,8 @@
     border-color: #f5f5f5;
     border-radius: 5px;
     border: 1px solid #f5f5f5;
-    font-style:italic;
-    padding:5px;
+    font-style: italic;
+    padding: 5px;
 }
 
 .banner-arrow-container {
@@ -114,11 +114,27 @@ ul {
 }
 
 @media only screen and (max-width:767px) {
+    .banner-text {
+        top: 160px;
+        font-size: 12px;
+        line-height: 22px;
+    }
+
+    .btn-banner {
+        font-size: 10px;
+        padding: 3px;
+    }
+
     .carousel img {
         height: 172px;
     }
 
     .slides {
         height: 178px;
+    }
+
+    .banner-arrow {
+        margin-left: 5px;
+        height: 25px;
     }
 }
