--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
@@ -17,14 +17,17 @@
     content: "";
     clear: both;
 }
-.user-image {
+.navbar-right .user-image {
     height: 50px;
     width: 50px;
-    border-radius: 25px;
+}
+.user-image {
+    border-radius: 50%;
     margin-top: 5px;
     margin-bottom: 5px;
     float:left;
 }
+
 
 .user-detail {
     font-size: 13px;
