--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/user-question/user-question.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/user-question/user-question.component.html
@@ -1,3 +1,3 @@
-﻿<div class="tab" *ngFor="let question of questions">
+﻿<div *ngFor="let question of questions">
     <question-panel [question]="question"></question-panel>
 </div>
