--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Altaperspectiva.OpenId</title>
+    <link href="~/css/alta-font/css/alta-fonts.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-touch-carousel/dist/css/bootstrap-touch-carousel.css" />
     <link rel="stylesheet" href="~/css/site.css" />
@@ -149,9 +150,7 @@
         <div class="navbar-header">
             <a href="http://altap.azurewebsites.net"><img class="logo" src="../images/LOGO CUADRADO.png" /></a>
             <a href="http://altap.azurewebsites.net" class="navbar-brand">
-                <font style="color: #000000;">
-                    Alta Perspectiva
-                </font>
+                Alta Perspectiva
             </a>
         </div>
     </div>
