--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_LoginPartial.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_LoginPartial.cshtml
@@ -12,6 +12,12 @@
             margin-bottom: 8px;
         }
 
+        .navbar-brand {
+            color: black !important;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            font-family: typogroteskrounded;
+        }
 
         .anchaor {
             cursor: pointer;
