--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
@@ -28,13 +28,14 @@
 
 .btn-banner {
     font-size: 17px;
-    color: #F6912B;
+    color: #eaa90c;
     background-color: #f5f5f5;
     border-color: #f5f5f5;
-    border-radius: 5px;
+    border-radius: 8px;
     border: 1px solid #f5f5f5;
     font-style: italic;
-    padding: 5px;
+    font-weight: bold;
+    padding: 8px;
 }
 
 .banner-arrow-container {
@@ -114,21 +115,26 @@ ul {
 .carousel-indicators li {
     border: 1px solid #d0cece;
 }
+
 @media only screen and (max-width:1024px) {
-        .slide-item {
-        height:200px;
-    }
-    .banner-text {
-        line-height:25px;
+    .slide-item {
+        height: 200px;
     }
 
+    .banner-text {
+        line-height: 30px;
+        font-size: 27px;
+        top: 15px;
+    }
 }
+
 @media only screen and (max-width:767px) {
     .slide-item {
-        height:200px;
+        height: 200px;
     }
+
     .banner-text {
-        line-height:11px;
+        line-height: 11px;
         font-size: 12px;
         line-height: 22px;
     }
