--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
@@ -37,6 +37,10 @@
     font-weight: bold;
     padding: 8px;
 }
+.btn-banner:hover{
+    background-color:#e6e5e5;
+    border-color:#e6e5e5;
+}
 
 .banner-arrow-container {
     position: relative;
